// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="css-q6ydzw components-divider wp-components-divider"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider css-h9ycj5"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider css-1ue3z9p"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider css-1d0u8mq"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;
